syntax = "proto3";

option go_package = ".;user";

package user;

service UserService {
  rpc GetOne (OneUserRequest) returns (OneUserReply) {}
  rpc Create (CreateUserRequest) returns (OneUserReply) {}
}

message OneUserRequest {
  uint32 id = 1;
}

message OneUserReply {
  uint32 id = 1;
  uint32 age = 2;
  string name = 3;
}

message CreateUserRequest {
  uint32 age = 2;
  string name = 3;
}